# projeto-analise-vendas

./: README.md  analise_dados_vendas.py  faturamento.xlsx  pyproject.toml  vendas.xlsx
